--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,9 +4,11 @@
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.0",
     "com.unity.render-pipelines.high-definition": "17.0.4",
+    "com.unity.render-pipelines.high-definition-config": "17.0.4",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
+    "com.unity.xr.management": "4.5.1",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
